# omlx

./: pyproject.toml
omlx/: __init__.py  engine_pool.py  server.py
omlx/admin/: routes.py
omlx/admin/static/js/: dashboard.js
omlx/admin/templates/dashboard/: _status.html
omlx/api/: audio_routes.py
omlx/engine/: audio_utils.py  embedding.py  reranker.py  sts.py  tts.py
omlx/integrations/: codex.py
omlx/models/: embedding.py  reranker.py
packaging/: README.md  build.py
packaging/omlx_app/: __init__.py  app.py
tests/: test_audio_sts.py  test_audio_stt.py  test_audio_tts.py
